--- a/wp-content/themes/edb24-pwa-theme/assets/preprocess/sass/critical.scss
+++ b/wp-content/themes/edb24-pwa-theme/assets/preprocess/sass/critical.scss
@@ -15,9 +15,9 @@ body {
     position: sticky;
 }
 .logo {
-    font-family: 'Painthing With Chocolate'; 
+    font-family: 'Orbitron';
     font-size: calc(28px + (36 - 28) * ((100vw - 300px)/ (1600 - 1000)));
-    font-weight: normal;
+    font-weight: 600;
     grid-area: logo;
 }
 .logo:hover {
@@ -37,10 +37,10 @@ body {
 
     .logo:hover {
         //background: linear-gradient(to right, #00a5ff 0%,#f72e2e 33%,#5aff28 66%,#fff389 100%);
-        --onhover_logo_gradient1: #00a5ff;
-        --onhover_logo_gradient2: #f72e2e;
+        --onhover_logo_gradient1: #f72e2e;
+        --onhover_logo_gradient2: #fff389;
         --onhover_logo_gradient3: #5aff28;
-        --onhover_logo_gradient4: #fff389;
+        --onhover_logo_gradient4: #00a5ff;
         background-clip: text;
         -webkit-text-fill-color: transparent;
     }
@@ -192,9 +192,9 @@ nav.social_media img {
         padding-bottom: 7px;
         margin-bottom: 6px;
         border-radius: 0px 0px 15px 15px;
-        transition-property: top;
+        box-shadow: 0px 0px 0px transparent;
+        transition-property: top box-shadow;
         transition-duration: .5s;
-        box-shadow: 0px 5px 5px #000;
     }
     #menu-main-menu li {
         text-align: center;
@@ -239,8 +239,9 @@ nav.social_media img {
         right: 0px;
     }
     #toggle-main-menu:checked ~ .menu-on {
-        top: 195px;
+        top: 172px;
         background:#e6a935;
+        box-shadow: 0px 5px 5px #000;
     }
     #menu-main-menu {
         flex-flow: column;
